remove old webpage ref in png logo

--- a/OrchardSite/Pages/_Layout.cshtml
+++ b/OrchardSite/Pages/_Layout.cshtml
@@ -68,7 +68,7 @@
         <div class="container">
             <!-- <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a> -->
             <a class="navbar-brand" href="#">
-                <img src="https://www.chaclaforever.com/wp-content/uploads/2019/05/cropped-real.png" alt="">
+                <img src="~/img/portfolio/logo_cro.png" alt="">
             </a>
             <button class="navbar-toggler navbar-toggler-right text-uppercase bg-dark text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
