Moving the favico to the right place

--- a/OrchardSite/Pages/_Layout.cshtml
+++ b/OrchardSite/Pages/_Layout.cshtml
@@ -23,7 +23,7 @@
     <!-- Plugin CSS -->
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css">
     <!--Favicon.ico*-->
-    <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
     <!-- Custom styles for this template -->
     <link href="css/freelancer.css" rel="stylesheet">
