Fix some Issues and make it beauty

--- a/OrchardSite/Pages/Index.cshtml
+++ b/OrchardSite/Pages/Index.cshtml
@@ -207,7 +207,7 @@
         <hr class="star-dark mb-5">
         <div class="row">
             <div class="col-xl-3 col-lg-6 col-sm-8 col-xs-6 ml-auto col-mx-auto mb-4 mine" style="height: 450px;">
-                <div class="d-flex p-2 bg-secondary rounded-top h-25">
+                <div class="d-flex p-2 bg-transparent rounded-top h-25">
                     <div class="container m-0 p-1 text-center">
                         <h5 class="text-uppercase mb-1">Dirección</h5>
                         <p class="lead mb-0">
@@ -216,7 +216,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="d-flex p-0 bg-warning h-75">
+                <div class="d-flex p-4 bg-transp h-75">
                     <img src="img/portfolio/local.png" class="rounded img-fluid" alt="Responsive image">
                 </div>
             </div>
