--- a/OrchardSite/Pages/_Layout.cshtml
+++ b/OrchardSite/Pages/_Layout.cshtml
@@ -89,7 +89,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="nosotros dropdown-item" href="#">Historia</a>
-                            <a class="nosotros dropdown-item" href="#portfolio-modal-1">Mision y Vision</a>
+                            <a class="nosotros dropdown-item" href="#mision-vision">Mision y Vision</a>
                             <a class="nosotros dropdown-item" href="#">Principios-Valores</a>
                             <a class="nosotros dropdown-item" href="#">Política de Calidad</a>
                         </div>
@@ -182,9 +182,10 @@
             <div class="row">
                 <div class="col-md-4 mb-5 mb-lg-0" style="overflow: hidden">
                     <h4 class="text-uppercase mb-4">Nuestro Facebook</h4>
-                    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FMCC-Chacla-Forever-513978959017333%2F&tabs&width=340&height=214&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-                            width="340" height="214" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-                            allowTransparency="true" allow="encrypted-media"></iframe>
+                    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FMCC-Chacla-Forever-513978959017333%2F%3Fref%3Dbr_rs&tabs&width=340&height=70&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" 
+                            width="340" height="70" style="border:none;overflow:hidden" 
+                            scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media">
+                    </iframe>
                 </div>
                 <div class="col-md-4 mb-5 mb-lg-0">
                     <h4 class="text-uppercase mb-4">Encuentranos en:</h4>
@@ -238,37 +239,38 @@
     </div>
 
     <!-- Portfolio Modals -->
+
     <!-- Portfolio Modal 1 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-1">
+    <div class="portfolio-modal mfp-hide" id="mision-vision">
         <div class="portfolio-modal-dialog bg-white">
             <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
                 <i class="fa fa-3x fa-times"></i>
             </a>
             <div class="container text-center">
                 <div class="row">
-                    <div class="col-lg-8 mx-auto">
-                        <h2 class="text-secondary text-uppercase mb-0">Mision y Visión</h2>
-                        <hr class="star-dark mb-5">
-                        <img class="img-fluid mb-5" src="img/portfolio/cabin.png" height="300" width="300" alt="">
-                        <div class="row">
+                    <div class="col-lg-12 mx-auto p-0">
+                        <h2 class="text-secondary mb-0">Mision y Visión</h2>
+                        <hr class="star-dark mb-6">
+                        @*<img class="img-fluid mb-5" src="img/portfolio/cabin.png" height="300" width="300" alt="">*@
+                        <img class="mx-auto border-dark" src="~/img/portfolio/mision-vision.png" width="200" />
+                        <div class="row m-4">
                             <div class="col-xl-6 col-lg-6 col-md-6">
-                                <h5>Misión</h5>
-                                <h4 class="mb-2">
+                                <h4>Misión</h4>
+                                <h6 class="mb-2 text-left">
                                     Al año 2020 nos vemos fortalecidos y reconocidos institucionalmente como MCC ejecutando proyectos en beneficio de
                                     nuestra comunidad LGTBI de Lima este, logrando obtener un cambio de comportamiento resposable frente a la prevención
                                     de las ITS/VIH/SIDA y el desarrollo sostenido de nuestra población, obteniendo así una comunidad empoderada y
                                     fortalecida en la lucha de la estigma y discriminación; promoviendo nuestros derechos humanos.
-                                </h4>
+                                </h6>
                             </div>
                             <div class="col-xl-6 col-lg-6 col-md-6">
-                                <h5>Visión</h5>
-                                <h4 class="mb-2">
+                                <h4>Visión</h4>
+                                <h6 class="mb-2 text-left">
                                     Como MCC buscamos el fortalecimiento de la organizaiones LGTBI de Lima Este y el reconocimiento e igualdad de los
                                     derechos humanos de nuestra comunidad ante a la sociedad,logrando disminuir y erradicar el estigma y discriminación
                                     con énfasis a la disminución de incidencia de las ITS/VIH/SIDA en nuestra comunidad LGTBI de Lima Este.
-                                </h4>
+                                </h6>
                             </div>
-
                         </div>
 
                         <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
