--- a/OrchardSite/Pages/Actividades.cshtml
+++ b/OrchardSite/Pages/Actividades.cshtml
@@ -1,229 +1,84 @@
-﻿@page "/actividades"
+﻿@page
+
 
 @{
     Layout = "_Layout";
 }
 
-<!-- Header -->
-<header class="masthead bg-white pt-5 pb-0 text-white text-center">
-    <!-- <div class="container px-0">
-        <div class="bg">
-            <a class="freepik" href="http://www.freepik.com">Designed by Freepik</a>
-            <img class="car" src="https://s3.ca-central-1.amazonaws.com/image-web-frankie/suv.svg" alt="car">
-        </div>
-    </div> -->
-    <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item" data-interval="60000">
-                <img src="img/portfolio/slider3.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-
-                    <div class="row">
-                        <div class="col-lg-4 ml-auto mr-1 p-4 bg-primary">
-                            <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit</p>
-                        </div>
-                        <div class="col-lg-4 mr-auto ml-1 p-4 bg-primary">
-                            <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit</p>
-                        </div>
-                    </div>
-                    <div class="text-center mt-4">
-                        <a class="btn btn-xl btn-outline-light ftr" href="#">
-                            <i class="fas fa-notes-medical mr-2"></i>
-                            Hazte la prueba
-                        </a>
-                    </div>
-
-                </div>
-            </div>
-            <div class="carousel-item active" data-interval="60000">
-                <img src="img/portfolio/slider3.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-
-                    <!-- <div class="row">
-                      <div class="col-lg-12 ml-auto mr-1 p-4 ">
-                        <img src="https://www.chaclaforever.com/wp-content/uploads/2019/05/cropped-real.png" alt="">
-                      </div>
-                    </div> -->
-                    <div class="text-center mt-4">
-                        <a class="btn btn-xl btn-outline-light ftr" href="#">
-                            <i class="fas fa-notes-medical mr-2"></i>
-                            Hazte la prueba
-                        </a>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
+<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+    <div class="col-md-5 p-lg-5 mx-auto my-5">
+        <h1 class="display-4 font-weight-normal">Punny headline</h1>
+        <p class="lead font-weight-normal">And an even wittier subheading to boot. Jumpstart your marketing efforts with this example based on Apple's marketing pages.</p>
+        <a class="btn btn-outline-secondary" href="#">Coming soon</a>
     </div>
-</header>
+    <div class="product-device box-shadow d-none d-md-block"></div>
+    <div class="product-device product-device-2 box-shadow d-none d-md-block"></div>
+</div>
 
-<!-- Portfolio Grid Section -->
-<section class="portfolio pt-5" id="portfolio">
-    <div class="container">
-        <h2 class="text-center text-uppercase text-secondary mb-0">Servicios</h2>
-        <hr class="star-dark mb-5">
-        <div class="row">
-            <div class="col-md-6 col-lg-4">
-                <a class="portfolio-item d-block mx-auto mb-2" href="#portfolio-modal-1">
-                    <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                        <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                            <i class="fas fa-search-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img class="img-fluid" src="img/portfolio/prueba.png" alt="">
-                </a>
-                <h4 class="text-uppercase text-center mb-4">Prueba de VHI</h4>
-            </div>
-            <div class="col-md-6 col-lg-4">
-                <a class="portfolio-item d-block mx-auto mb-2" href="#portfolio-modal-2">
-                    <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                        <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                            <i class="fas fa-search-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img class="img-fluid" src="img/portfolio/deportes.png" alt="">
-                </a>
-                <h4 class="text-uppercase text-center mb-4">Talleres gratuitos</h4>
-            </div>
-            <div class="col-md-6 col-lg-4">
-                <a class="portfolio-item d-block mx-auto mb-2" href="#portfolio-modal-3">
-                    <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                        <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                            <i class="fas fa-search-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img class="img-fluid" src="img/portfolio/eventos.png" alt="">
-                </a>
-                <h4 class="text-uppercase text-center mb-4">Eventos</h4>
-            </div>
-            <div class="col-md-6 col-lg-4">
-                <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-4">
-                    <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                        <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                            <i class="fas fa-search-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img class="img-fluid" src="img/portfolio/game.png" alt="">
-                </a>
-            </div>
+<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+    <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+        <div class="my-3 py-3">
+            <h2 class="display-5">Another headline</h2>
+            <p class="lead">And an even wittier subheading.</p>
         </div>
+        <div class="bg-light box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
     </div>
-</section>
-
-<!-- About Section -->
-<section class="text-white mb-0" id="about">
-    <div class="container">
-        <h2 class="text-center text-uppercase text-white">Nosotros</h2>
-        <hr class="star-light mb-5">
-        <div class="row">
-            <div class="col-lg-4 ml-auto">
-                <p class="lead">
-                    La Asociación Civil CHACLA´ FOREVER, se formó en el año 2000,
-                    con un grupo de amigos deportistas gays y mujeres trans, preocupados por los múltiples
-                    decesos de nuestras amistades, que no tenían acceso a la salud y a la información en
-                    prevención de ITS/VIH/SIDA.
-                </p>
-            </div>
-            <div class="col-lg-4 mr-auto">
-                <p class="lead">
-                    Es así que empezamos a organizar campeonatos de voley dirigido
-                    a la comunidad LTGBI, el cual se invitaba a distintas organizaciones y ONG,
-                    realizar campañas de información en ITS/VIH/SIDA y distribución de preservativos.
-                </p>
-            </div>
+    <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+        <div class="my-3 p-3">
+            <h2 class="display-5">Another headline</h2>
+            <p class="lead">And an even wittier subheading.</p>
         </div>
-        <div class="text-center mt-4">
-            <a class="btn btn-xl btn-outline-light py-2 px-3 js-scroll-trigger" href="#oficinas">
-                <i class="far fa-laugh-beam mr-2"></i>
-                Visítanos!
-            </a>
-        </div>
+        <div class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
     </div>
-</section>
+</div>
 
-<!-- Contact Section -->
-<section id="contact">
-    <div class="container">
-        <h2 class="text-center text-uppercase text-secondary mb-0">Contáctate</h2>
-        <hr class="star-dark mb-5">
-        <div class="row">
-            <div class="col-lg-8 mx-auto">
-                <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-                <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                <form name="sentMessage" id="contactForm" novalidate="novalidate">
-                    <div class="control-group">
-                        <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                            <label>Nombre</label>
-                            <input class="form-control" id="name" type="text" placeholder="Nombre" required="required" data-validation-required-message="Please enter your name.">
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>
-                    <div class="control-group">
-                        <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                            <label>Correo</label>
-                            <input class="form-control" id="email" type="email" placeholder="Correo" required="required" data-validation-required-message="Please enter your email address.">
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>
-                    <div class="control-group">
-                        <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                            <label>Número Celular</label>
-                            <input class="form-control" id="phone" type="tel" placeholder="Número de Celular" required="required" data-validation-required-message="Please enter your phone number.">
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>
-                    <div class="control-group">
-                        <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                            <label>Mensaje</label>
-                            <textarea class="form-control" id="message" rows="5" placeholder="Mensaje" required="required" data-validation-required-message="Please enter a message."></textarea>
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>
-                    <br>
-                    <div id="success"></div>
-                    <div class="form-group">
-                        <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Enviar</button>
-                    </div>
-                </form>
-            </div>
+<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+    <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+        <div class="my-3 p-3">
+            <h2 class="display-5">Another headline</h2>
+            <p class="lead">And an even wittier subheading.</p>
         </div>
+        <div class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
     </div>
-</section>
-
-<!-- Contact Section -->
-<section id="oficinas">
-    <div class="container col-sm-12 pt-5">
-        <h2 class="text-center text-uppercase text-secondary mb-0">Oficina</h2>
-        <hr class="star-dark mb-5">
-        <div class="row">
-            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-8 col-xs-6 ml-auto col-mx-auto mb-4 mine" style="height: 450px;">
-                <div class="d-flex p-2 bg-warning rounded-top h-25">
-                    <div class="container m-0 p-1 text-center">
-                        <h5 class="text-uppercase mb-1">Dirección</h5>
-                        <p class="lead mb-0">
-                            Av. José Carlos Mariátegui Mz. T Lt. 14,
-                            Chaclacayo, frente al paradero Miguel Grau
-                        </p>
-                    </div>
-                </div>
-                <div class="d-flex p-2 bg-warning h-75">
-                    <img src="img/portfolio/local.png" class="rounded img-fluid" alt="Responsive image">
-                </div>
-            </div>
-            <div class="col-xl-3 col-lg-6 col-md-12 col-sm-12 col-mx-auto mr-auto mb-4 mapa">
-                <iframe width="100%" height="450"
-                        src="https://maps.google.com/maps?width=100%&height=600&hl=es&q=Les%20Rambles%2C%201%20Barcelona%2C%20Spain+(Oficina%20Chaclacayo)&ie=UTF8&t=&z=14&iwloc=B&output=embed"
-                        frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-            </div>
-
+    <div class="bg-primary mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+        <div class="my-3 py-3">
+            <h2 class="display-5">Another headline</h2>
+            <p class="lead">And an even wittier subheading.</p>
         </div>
+        <div class="bg-light box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
     </div>
-</section>
+</div>
+
+<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+    <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+        <div class="my-3 p-3">
+            <h2 class="display-5">Another headline</h2>
+            <p class="lead">And an even wittier subheading.</p>
+        </div>
+        <div class="bg-white box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+    </div>
+    <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+        <div class="my-3 py-3">
+            <h2 class="display-5">Another headline</h2>
+            <p class="lead">And an even wittier subheading.</p>
+        </div>
+        <div class="bg-white box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+    </div>
+</div>
+
+<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+    <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+        <div class="my-3 p-3">
+            <h2 class="display-5">Another headline</h2>
+            <p class="lead">And an even wittier subheading.</p>
+        </div>
+        <div class="bg-white box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+    </div>
+    <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+        <div class="my-3 py-3">
+            <h2 class="display-5">Another headline</h2>
+            <p class="lead">And an even wittier subheading.</p>
+        </div>
+        <div class="bg-white box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+    </div>
+</div>
