--- a/OrchardSite/Pages/Index.cshtml
+++ b/OrchardSite/Pages/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page  "/"
 
 @{
 
@@ -157,7 +157,7 @@
         <h2 class="text-center text-uppercase text-secondary mb-0">Contáctate</h2>
         <hr class="star-dark mb-5">
         <div class="row">
-            <div class="col-lg-8 mx-auto">
+            <div class="col-lg-8 mx-auto p-4 border-left border-right">
                 <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
                 <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
                 <form name="sentMessage" id="contactForm" novalidate="novalidate">
@@ -192,7 +192,7 @@
                     <br>
                     <div id="success"></div>
                     <div class="form-group">
-                        <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Enviar</button>
+                        <button type="submit" class="btn btn-primary btn-xl mx-5" id="sendMessageButton">Enviar</button>
                     </div>
                 </form>
             </div>
