--- a/OrchardSite/Pages/_Layout.cshtml
+++ b/OrchardSite/Pages/_Layout.cshtml
@@ -64,10 +64,10 @@
         </ul>
     </div>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg bg-secondary fixed-top" id="mainNav">
-        <div class="container">
+    <nav class="navbar navbar-expand-lg bg-light fixed-top" id="mainNav">
+        <div class="container mr-0">
             <!-- <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a> -->
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/">
                 <img src="~/img/portfolio/logo_cro.png" alt="">
             </a>
             <button class="navbar-toggler navbar-toggler-right text-uppercase bg-dark text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -111,7 +111,7 @@
                     </li>
                     <!-- BOTON ACTIVIDADES -->
                     <li class="nav-item mx-0 mx-lg-1">
-                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="/blog.html">
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="/actividades">
                             <i class="fas fa-id-card"></i> Actividades
                         </a>
                     </li>
