--- a/OrchardSite/Pages/_Layout.cshtml
+++ b/OrchardSite/Pages/_Layout.cshtml
@@ -3,13 +3,13 @@
 <html lang="es">
 
 <head>
-    
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Freelancer - Start Bootstrap Theme</title>
+    <title>ChaclaForever</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -20,6 +20,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Karla|Mandali|PT+Sans|Vollkorn&display=swap" rel="stylesheet">
     <!-- Plugin CSS -->
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css">
     <!--Favicon.ico*-->
@@ -36,23 +37,23 @@
     <div class="social">
         <ul>
             <li class="facebook">
-                <a href="https://facebook.com/lucas.russo.923" target="_blank">
+                <a href="fb.com/MCC-Chacla-Forever-513978959017333/" target="_blank">
                     <!-- <i class="fa fa-facebook fa-2x rot"></i> -->
                     <i class="fab fa-facebook-f fa-2x rot"></i>
                 </a>
             </li>
             <li class="twitter">
-                <a href="https://twitter.com/lucasrdvp" target="_blank">
+                <a href="https://twitter.com/LimaGayNet" target="_blank">
                     <i class="fab fa-twitter fa-2x rot"></i>
                 </a>
             </li>
             <li class="youtube">
-                <a href="#" target="_blank">
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
                     <i class="fab fa-youtube fa-2x rot"></i>
                 </a>
             </li>
             <li class="instagram">
-                <a href="#" target="_blank">
+                <a href="https://www.instagram.com/lgbt/?hl=es-la" target="_blank">
                     <i class="fab fa-instagram fa-2x rot"></i>
                 </a>
             </li>
@@ -71,7 +72,6 @@
                 <img src="~/img/portfolio/logo_cro.png" alt="">
             </a>
             <button class="navbar-toggler navbar-toggler-right text-uppercase bg-dark text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                Menu
                 <i class="fas fa-bars"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -227,7 +227,7 @@
 
     <div class="copyright py-4 text-center text-white">
         <div class="container">
-            <h4>Copyright &copy; MCC ChaclaForever / Creado por Martin B.R</h4>
+            <h6>Copyright &copy; MCC ChaclaForever / by <a href="#">Mbr</a></h6>
         </div>
     </div>
 
@@ -250,11 +250,10 @@
                 <div class="row">
                     <div class="col-lg-12 mx-auto p-0">
                         <h2 class="text-secondary mb-0">Mision y Visión</h2>
-                        <hr class="star-dark mb-6">
-                        @*<img class="img-fluid mb-5" src="img/portfolio/cabin.png" height="300" width="300" alt="">*@
-                        <img class="mx-auto border-dark" src="~/img/portfolio/mision-vision.png" width="200" />
-                        <div class="row m-4">
-                            <div class="col-xl-6 col-lg-6 col-md-6">
+                        <hr class="star-dark mb-4">
+
+                        <div class="row m-3 pt-5">
+                            <div class="col-xl-4 col-lg-6 col-md-12 mx-auto">
                                 <h4>Misión</h4>
                                 <h6 class="mb-2 text-left">
                                     Al año 2020 nos vemos fortalecidos y reconocidos institucionalmente como MCC ejecutando proyectos en beneficio de
@@ -263,7 +262,7 @@
                                     fortalecida en la lucha de la estigma y discriminación; promoviendo nuestros derechos humanos.
                                 </h6>
                             </div>
-                            <div class="col-xl-6 col-lg-6 col-md-6">
+                            <div class="col-xl-4 col-lg-6 col-md-12 mx-auto">
                                 <h4>Visión</h4>
                                 <h6 class="mb-2 text-left">
                                     Como MCC buscamos el fortalecimiento de la organizaiones LGTBI de Lima Este y el reconocimiento e igualdad de los
@@ -275,7 +274,7 @@
 
                         <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                             <i class="fa fa-close"></i>
-                            Close Project
+                            Cerrar
                         </a>
                     </div>
                 </div>
@@ -292,19 +291,28 @@
             <div class="container text-center">
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
-                        <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
+                        <h2 class="text-secondary text-black-50 mb-0">Talleres Deportivos</h2>
                         <hr class="star-dark mb-5">
-                        <img class="img-fluid mb-5" src="img/portfolio/cake.png" alt="">
-                        <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                        <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+                            <div class="container">
+
+                                <div class="row">
+                                    <div class="col-md-6 col-lg-12">
+                                        <div class="mb-3">
+                                            <img class="img-fluid" src="~/img/portfolio/portfolio/taller-deportivo.jpg" width="400" alt="">
+                                        </div>
+                                </div>
+                        </div>
+                        <p class="mb-5 lead us-font">En Chacla Forever ofrecemos una gran varidad de talleres gratuitos deportivos y sociales para todos quienes quieran ser parte de nuestra comunidad.</p>
+                        <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="/talleres">
                             <i class="fa fa-close"></i>
-                            Close Project
+                            Buscar más talleres
                         </a>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+     </div>
+   </div>
 
     <!-- Portfolio Modal 3 -->
     <div class="portfolio-modal mfp-hide" id="portfolio-modal-3">
@@ -315,13 +323,13 @@
             <div class="container text-center">
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
-                        <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
+                        <h2 class="text-secondary text-uppercase mb-0">Eventos</h2>
                         <hr class="star-dark mb-5">
-                        <img class="img-fluid mb-5" src="img/portfolio/circus.png" alt="">
-                        <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                        <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+                        <img class="img-fluid mb-5" src="~/img/portfolio/portfolio/eventos.png" alt="">
+                        <h5 class="mb-5">Programa: "Expansión y la respuesta nacional al VIH en poblaciones clave y vulnerables de ámbitos urbanos y amazónicos del Perú"</h5>
+                        <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="/actividades">
                             <i class="fa fa-close"></i>
-                            Close Project
+                            Quiero Participar!
                         </a>
                     </div>
                 </div>
@@ -383,14 +391,16 @@
             </a>
             <div class="container text-center">
                 <div class="row">
-                    <div class="col-lg-8 mx-auto">
-                        <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
+                    <div class="col-lg-7 mx-auto">
+                        <h2 class="text-secondary text-uppercase mb-0">Hazte la prueba!</h2>
                         <hr class="star-dark mb-5">
-                        <img class="img-fluid mb-5" src="img/portfolio/submarine.png" alt="">
-                        <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                        <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+                        <img class="img-fluid mb-5" src="~/img/portfolio/portfolio/prueba.png" alt="">
+                        <p class="mb-5">El VIH es una infección causada por el virus de inmunodeficia humana,que ataca las defensas del cuerpo,
+                        y deja la persona vulnerable a las infecciones y enfermedades.<br/>
+                        Puedes hacerte la prueba gratis <a class="portfolio-modal-dismiss" href="#oficinas"> aquí</a></p>
+                        <a class="btn btn-primary btn-lg rounded-pill" href="https://fb.com/MCC-Chacla-Forever-513978959017333/">
                             <i class="fa fa-close"></i>
-                            Close Project
+                            Me Interesa!
                         </a>
                     </div>
                 </div>
