--- a/OrchardSite/wwwroot/css/freelancer.css
+++ b/OrchardSite/wwwroot/css/freelancer.css
@@ -58,7 +58,7 @@ hr.star-dark {
 
 hr.star-dark:after {
   color: #2C3E50;
-  background-color: white;
+  background-color: transparent;
 }
 
 section {
@@ -250,7 +250,7 @@ header.masthead h2 {
 
 .portfolio-modal .portfolio-modal-dialog {
   padding: 3rem 1rem;
-  min-height: calc(100vh - 2rem);
+  min-height: calc(70vh - 2rem);
   margin: 1rem calc(1rem - 8px);
   position: relative;
   z-index: 2;
@@ -273,11 +273,13 @@ header.masthead h2 {
 }
 
 @media (min-width: 768px) {
-  .portfolio-modal .portfolio-modal-dialog {
-    min-height: 100vh;
-    padding: 3rem;
-    margin: 3rem calc(3rem - 8px);
-  }
+    .portfolio-modal .portfolio-modal-dialog {
+        min-height: 70vh;
+        padding: 3rem;
+        margin: 3rem calc(3rem - 8px);
+        margin-left: 8rem;
+        margin-right: 8rem;
+    }
   .portfolio-modal .portfolio-modal-dialog h2 {
     font-size: 3rem;
   }
@@ -396,6 +398,7 @@ a:focus, a:hover, a:active {
 }
 
 /* --------------------------------------- CUSTOM SHIT MEN --------------------------------------------*/
+
 #oficinas {
     background-image: url("../img/portfolio/ofi-pattern.png");
     background-repeat:repeat;
@@ -405,8 +408,9 @@ a:focus, a:hover, a:active {
     font-size : 10px;
 }
 
-section#contact{
-  padding-bottom: 1em;
+section#contact {
+    padding-bottom: 1em;
+    background-color: ivory;
 }
 section#oficinas{
   padding-top: 0;
@@ -415,17 +419,22 @@ section#oficinas{
 .bg-transp {
     background: rgba(0, 0, 0, 0.692);
 }
-/*------------------------------------------ SOCIAL SHIT --------------------------------------------- */
+.us-font {
+    font-family: 'Mandali', sans-serif;
+}
 
+#mision-vision {
+    /*background-image: url(../img/portfolio/mision-vision.png)*/
+}
+/*------------------------------------------ SOCIAL SHIT --------------------------------------------- */
 .social ul {
-	position: fixed;
-	left: -116px;
-  top:40%;
-	list-style: none;
-	color: #000;
-  transform: rotate(-90deg);
-  z-index:99999;
-  
+    position: fixed;
+    left: -116px;
+    top: 40%;
+    list-style: none;
+    color: #000;
+    transform: rotate(-90deg);
+    z-index: 99999;
 }
 .social ul li {
 	float: right;
@@ -500,7 +509,7 @@ section#oficinas{
 }
 
 .carousel-item>img{
-  filter: blur(2px);
+ 
 }
 
 .ftr{
