--- a/OrchardSite/Pages/Index.cshtml
+++ b/OrchardSite/Pages/Index.cshtml
@@ -16,26 +16,6 @@
         <div class="carousel-inner">
             <div class="carousel-item" data-interval="60000">
                 <img src="img/portfolio/slider3.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-
-                    <div class="row">
-                        <div class="col-lg-8 py-3 px-5 bg-transp mx-auto">
-                            <p class="lead">
-                                <i class="fas fa-arrow-circle-right"></i> Gestión<br/>
-                                <i class="fas fa-arrow-circle-right"></i> Vinculación y Tamizaje<br/>
-                                <i class="fas fa-arrow-circle-right"></i> Incidencia Política<br/>
-                                <i class="fas fa-arrow-circle-right"></i> Capacitación
-                            </p>
-                        </div>
-                    </div>
-                    <div class="text-center mt-4">
-                        <a class="btn btn-xl btn-outline-light ftr" href="http://fb.com/MCC-Chacla-Forever-513978959017333/">
-                            <i class="fas fa-notes-medical mr-2"></i>
-                            Hazte la prueba
-                        </a>
-                    </div>
-
-                </div>
             </div>
             <div class="carousel-item active" data-interval="60000">
                 <img src="img/portfolio/slider3.png" class="d-block w-100" alt="...">
@@ -53,7 +33,7 @@
                     </div>*@
 
                     <div class="text-center mt-4">
-                        <a class="btn btn-xl btn-outline-light ftr" href="#">
+                        <a class="btn btn-xl btn-outline-light ftr" href="https://fb.com/MCC-Chacla-Forever-513978959017333/">
                             <i class="fas fa-notes-medical mr-2"></i>
                             Hazte la prueba
                         </a>
@@ -99,7 +79,7 @@
                     </div>
                     <img class="img-fluid" src="img/portfolio/deportes.png" alt="">
                 </a>
-                <h4 class="text-uppercase text-center mb-4">Talleres gratuitos</h4>
+                <h4 class="text-uppercase text-center mb-4">Talleres</h4>
             </div>
             <div class="col-md-6 col-lg-4">
                 <a class="portfolio-item d-block mx-auto mb-2" href="#portfolio-modal-3">
@@ -110,19 +90,8 @@
                     </div>
                     <img class="img-fluid" src="img/portfolio/eventos.png" alt="">
                 </a>
-                <h4 class="text-uppercase text-center mb-4">Eventos</h4>
-            </div>
-            @*<div class="col-md-6 col-lg-4">
-                <a class="portfolio-item d-block mx-auto mb-2" href="#portfolio-modal-4">
-                    <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                        <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                            <i class="fas fa-search-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img class="img-fluid" src="~/img/portfolio/calendar.png" alt="">
-                </a>
                 <h4 class="text-uppercase text-center mb-4">Actividades</h4>
-            </div>*@
+            </div>
         </div>
     </div>
 </section>
@@ -164,7 +133,7 @@
         <h2 class="text-center text-uppercase text-secondary mb-0">Contáctate</h2>
         <hr class="star-dark mb-5">
         <div class="row">
-            <div class="col-lg-8 mx-auto p-4 border-left border-right">
+            <div class="col-lg-6 mx-auto p-4 border-left border-right">
                 <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
                 <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
                 <form name="sentMessage" id="contactForm" novalidate="novalidate">
@@ -203,35 +172,40 @@
                     </div>
                 </form>
             </div>
-        </div>
-    </div>
-</section>
-
-<!-- Contact Section -->
-<section id="oficinas">
-    <div class="container col-sm-12 pt-5">
-        <h3 class="text-center text-uppercase text-secondary mb-0">Oficina</h3>
-        <hr class="star-dark mb-5">
-        <div class="row">
-            <div class="col-xl-3 col-lg-6 col-sm-8 col-xs-6 ml-auto col-mx-auto mb-4 mine" style="height: 450px;">
-                <div class="d-flex p-2 bg-transparent rounded-top h-25">
-                    <div class="container m-0 p-1 text-center us-font">
-                        <h5 class="text-uppercase mb-1">Dirección</h5>
-                        <p class="lead mb-0">
-                            Urb. Miguel Grau Mz. T Lote 14 - Chaclacayo
-                        </p>
+            <div class="container col-lg-6 px-0 mx-0">
+                <div class="col-lg-12 col-md-8 col-mx-auto mb-4 mine" style="height: 450px;">
+                    <div class="d-flex p-2 bg-transparent rounded-top h-25">
+                        <div class="container m-0 p-1 text-center us-font">
+                            <h5 class="text-uppercase mb-1">Dirección</h5>
+                            <p class="lead mb-0">
+                                Urb. Miguel Grau Mz. T Lote 14 - Chaclacayo
+                            </p>
+                        </div>
+                    </div>
+                    <div class="d-flex p-2 bg-transp h-75">
+                        <img src="~/img/portfolio/Ofi-nueva.png" class="rounded img-fluid" alt="Responsive image">
                     </div>
                 </div>
-                <div class="d-flex p-2 bg-transp h-75">
-                    <img src="~/img/portfolio/Ofi-nueva.png" class="rounded img-fluid" alt="Responsive image">
-                </div>
-            </div>
-            <div class="col-xl-3 col-lg-6 col-md-12 col-sm-12 col-mx-auto mr-auto mb-4 mapa">
-                <iframe width="100%" height="450"
-                        src="https://maps.google.com/maps?width=100%&height=600&hl=es&q=Les%20Rambles%2C%201%20Barcelona%2C%20Spain+(Oficina%20Chaclacayo)&ie=UTF8&t=&z=14&iwloc=B&output=embed"
-                        frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-            </div>
+                <div class="col-md-12 col-mx-auto mr-auto mb-4 mapa overflow-hidden">
+                    <div class="mapouter"><div class="gmap_canvas"><iframe width="845" height="411" id="gmap_canvas" src="https://maps.google.com/maps?q=miguel%20grau%20Chaclacayo&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.pureblack.de"></a></div>
+                    <style>
+                        .mapouter {
+                            position: relative;
+                            text-align: right;
+                            height: 411px;
+                            width: 845px;
+                        }
 
+                        .gmap_canvas {
+                            overflow: hidden;
+                            background: none !important;
+                            height: 411px;
+                            width: 845px;
+                        }
+                    </style></div>
+                </div>
+            </div>               
+                         
         </div>
     </div>
 </section>
